--- a/starbucks/starbucks.html
+++ b/starbucks/starbucks.html
@@ -39,6 +39,43 @@
           <div class = "material-icons">search</div>
         </div>
       </div>
+      <ul class = "main-menu">
+        <li class = "item">
+          <div class = "item_name">COFFEE</div>
+          <div class = "item_contents">
+            <div class = "contents_menu">
+              <ul class = "contents_texture">
+                <li><h4>커피</h4>
+                <ul>
+                  <li>스타벅스 원두</li>
+                  <li>스타벅스 비아</li>
+                  <li>스타벅스 오리가미</li>
+                </ul></li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class = "item">
+          <div class = "item_name">MENU</div>
+          <div class = "item_contents"></div>
+        </li>
+        <li class = "item">
+          <div class = "item_name">STORE</div>
+          <div class = "item_contents"></div>
+        </li>
+        <li>
+          <div class = "item_name">RESPONSIBILITY</div>
+          <div class = "item_contents"></div>
+        </li>
+        <li>
+          <div class = "item_name">MY STARBUCKS</div>
+          <div class = "item_contents"></div>
+        </li>
+        <li>
+          <div class = "item_name">WHAT'S NEW</div>
+          <div class = "item_contents"></div>
+        </li>
+      </ul>
     </div>
   </header>
 </body>
