--- a/starbucks/starbucks.html
+++ b/starbucks/starbucks.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Starbucks Coffee Korea</title>
-  <!--브라우저 스타일 초기화-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-  <link rel="stylesheet" href="./starbucks.css">  /* css연결 */
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
-  <!--Google Material Icons-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Starbucks Coffee Korea</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+    <link rel="stylesheet" href="./starbucks.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  </head>
 <body>
+  <!--6-1-->
   <header>
-    <div class = "inner">
-      <a href = "/" class = "logo">
-        <img src = "./images/starbucks_logo.png" alt = "STARBUCKS"/>
-      </a>
-      <div class = "sub-menu">
-        <ul class = "menu">
-          <li>
-            <a href="/signin">Sign In</a>
-          </li>
-          <li>
-            <a href = "javascript:void(0)">My Starbucks</a>
-          </li>
-          <li>
-            <a href = "javascript:void(0)">Customer Service & Idass</a>
-          </li>
-          <li>
-            <a href = "javascript:void(0)">Find a Store</a>
-          </li>
-        </ul>
-        <div class = "search">
-          <input type = "text"/>
-          <div class = "material-icons">search</div>
-        </div>
+      <div class="inner">
+          <a href="/" class="logo">
+              <img src="./images/starbucks_logo.png" alt="STARBUCKS" />
+          </a>
+          <div class="sub-menu">
+              <ul class="menu">
+                  <li>
+                      <a href="/signin">Sign in</a>
+                  </li>
+                  <li>
+                      <a href="javascript:void(0)">My Starbucks</a>
+                  </li>
+                  <li>
+                      <a href="javascript:void(0)">Customer Service & Ideas</a>
+                  </li>
+                  <li>
+                      <a href="javascript:void(0)">Find a Store</a>
+                  </li>
+              </ul>
+              <div class="search">
+                  <input type="text">
+                  <div class="material-icons">search</div>
+              </div>
+          </div>
       </div>
-      <ul class = "main-menu">
-        <li class = "item">
-          <div class = "item_name">COFFEE</div>
-          <div class = "item_contents">
-            <div class = "contents_menu">
-              <ul class = "contents_texture">
+      <!-- 6-2-->
+      <ul class="main-menu">
+        <li class="item">
+          <div class="item_name">COFFEE</div>
+          <div class="item_contents">
+            <div class="contents_menu">
+              <ul class="contents_texture">
                 <li><h4>커피</h4>
                 <ul>
                   <li>스타벅스 원두</li>
@@ -55,28 +55,57 @@
             </div>
           </div>
         </li>
-        <li class = "item">
-          <div class = "item_name">MENU</div>
-          <div class = "item_contents"></div>
+        <li class="item">
+          <div class="item_name">MENU</div>
+          <div class="item_contents"></div>
         </li>
-        <li class = "item">
-          <div class = "item_name">STORE</div>
-          <div class = "item_contents"></div>
+        <li class="item">
+          <div class="item_name">STORE</div>
+          <div class="item_contents"></div>
         </li>
-        <li>
-          <div class = "item_name">RESPONSIBILITY</div>
-          <div class = "item_contents"></div>
+        <li class="item">
+          <div class="item_name">RESPONSIBILITY</div>
+          <div class="item_contents"></div>
         </li>
-        <li>
-          <div class = "item_name">MY STARBUCKS</div>
-          <div class = "item_contents"></div>
+        <li class="item">
+          <div class="item_name">MY STARBUCKS</div>
+          <div class="item_contents"></div>
         </li>
-        <li>
-          <div class = "item_name">WHAT'S NEW</div>
-          <div class = "item_contents"></div>
+        <li class="item">
+          <div class="item_name">WHAT'S NEW</div>
+          <div class="item_contents"></div>
         </li>
       </ul>
-    </div>
-  </header>
+      <!--6-4-->
+      <div class="badges">
+        <div class="badge">
+          <img src="./images/badge1.jpg" alt="Badge" />
+        </div>
+        <div class="badge">
+          <img src="./images/badge2.jpg" alt="Ba" />
+        </div>
+      </div>
+      <!--6-4-->
+    </header>
+    <!--6-3-->
+    <section class="visual">
+      <div class="inner">
+        <div class="title fade-in">
+          <img src="./images/visual_title.png" alt="STARBUCKS" />
+          <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
+        </div>
+        <div class="fade-in">
+          <img src="./images/visual_cup1.png" alt="new" class="cup1 image" />
+          <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
+        </div>
+        <div class="">
+          <img src="./images/visual_cup2.png" alt="new" class="cup2 image" />
+          <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+        </div>
+        <div class="">
+          <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
+        </div>
+      </div>
+    </section>
 </body>
 </html>
