--- a/homework/PreparationCheck.html
+++ b/homework/PreparationCheck.html
@@ -1,123 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">;
-  <link rel="stylesheet" href="css/input.css">
-  <link rel="stylesheet" href="css/list.css">
-  <title>to do list</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    #wrapper {
-      width: 600px;
-      margin: 0 auto;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    form {
-      background-color: #007acc;
-      padding: 30px 40px;
-      color: white;
-      text-align: center;
-    }
-
-    input {
-      border: none;
-      width: 440px;
-      padding: 10px;
-      float: left;
-      font-size: 16px;
-    }
-
-    .addBtn {
-      padding: 10px;
-      width: 50px;
-      border: none;
-      background-color: #fff;
-      box-shadow: 1px 2px 4px #167dae;
-      color: #555;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.3;
-    }
-
-    form::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-
-    form::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    ul li {
-      cursor: pointer;
-      position: relative;
-      padding: 12px 8px 12px 40px;
-      background: #eee;
-      font-size: 18px;
-      transition: 0.2s;
-    }
-
-    ul li:nth-child(odd) {
-      background-color: #f9f9f9;
-    }
-
-    ul li:hover {
-      background-color: #ddd;
-    }
-
-    .close {
-      position: absolute;
-      right: 0;
-      top: 0;
-      padding: 12px 16px;
-      border: none;
-      background: rgba(255, 255, 255, 0)
-    }
-
-    .close:hover {
-      background-color: #007acc;
-      color: white;
-    }
-  </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>To do list</title>
+    <link rel="stylesheet" href="css/input.css">
+    <link rel="stylesheet" href="css/list.css">
 </head>
 <body>
-  <div id="wrapper">
-    <h2>여행 준비물 점검 목록</h2>
-    <form>
-      <input type="text" id="item" autofocus="true">
-      <button type="button" id="add" class="addBtn" onclick="addList()">추가</button>
-    </form>
-    <div id="itemList"></div>
-  </div>
-  <script>
-    function addList() {
-      const addValue = document.getElementById("item").value;
-      
-      const li = document.createElement("li");
-      li.setAttribute('id', addValue);
-      const textNode = document.createTextNode(addValue);
-      li.appendChild(textNode);
+    <div id="wrapper">
+        <h2>여행 준비물 점검 목록</h2>
+        <form>
+            <input type="text" id="item" autofocus="true">
+            <button type="button" id="add" class="addBtn">추가</button>
+        </form>
+        <div id="itemList"></div>
+    </div>
+    <script>
+        let list = [];
 
-      document.getElementById('fruits').appendChild(li);
-    }
-  </script>
+        let addBtn = document.getElementById("add");
+        addBtn.addEventListener("click", function () {
+            let item = document.getElementById("item").value;
+            if (item != null) {
+                list.push(item);
+                document.getElementById("item").value = "";
+            }
+
+            addList();
+        });
+
+        function addList() {
+            let showList = "<ul>"
+            for (let i = 0; i < list.length; i++) {
+                showList += "<li>" + list[i] + "<span class='close' id=" + i + ">X</span></li>";
+            }
+            showList += "</ul>";
+
+            document.getElementById("itemList").innerHTML = `${showList}`;
+            let deleteBtn = document.getElementsByClassName("close");
+            for (let i = 0; i < deleteBtn.length; i++) {
+                deleteBtn[i].addEventListener("click", function() {
+                    let id = this.getAttribute("id");
+                    list.splice(id, 1);
+                    addList();
+                });
+            }
+        }
+    </script>
 </body>
-</html>
+</html> 
